--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ bind C-a send-prefix
 unbind r
 bind r source-file ~/.tmux.conf
 
+# Set default shell to zsh
+set -g default-shell /bin/zsh
+
 # quick pane cycling
 unbind ^A
 bind ^A select-pane -t :.+:wq
